# franky

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  custom_stubgen.py  docker-compose.yml  generate_stubs.bash  setup.py  test.ipynb
.github/workflows/: build_and_test.yml  build_wheels.yml  documentation.yml  publish.yml
benchmarks/: inverse_kinematics_benchmark.cpp
doc/: Doxyfile
docker/common/: dependency_versions  install-catch2  install-dependencies  install-eigen  install-libfranka  install-pybind11  manylinux-build-wheels  manylinux-setup-pip
docker/run/: Dockerfile
examples/: brakes.py
franky/: __init__.py
include/: franky.hpp
include/franky/: cartesian_state.hpp  control_signal_type.hpp  gripper.hpp  joint_state.hpp  relative_dynamics_factor.hpp  robot.hpp  robot_pose.hpp  robot_velocity.hpp  scope_guard.hpp  twist.hpp  types.hpp
include/franky/motion/: cartesian_impedance_motion.hpp  cartesian_motion.hpp  cartesian_waypoint_motion.hpp  condition.hpp  exponential_impedance_motion.hpp  impedance_motion.hpp  joint_motion.hpp  joint_waypoint_motion.hpp  measure.hpp  motion.hpp  motion_generator.hpp  reaction.hpp  reference_type.hpp  stop_motion.hpp  waypoint_motion.hpp
python/: python.cpp
src/: gripper.cpp  robot.cpp  robot_pose.cpp  robot_velocity.cpp
src/motion/: cartesian_impedance_motion.cpp  cartesian_motion.cpp  cartesian_waypoint_motion.cpp  joint_motion.cpp  joint_waypoint_motion.cpp
src/path/: aggregated_path.cpp
